[package]
name = "identidock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "json"] }
http = "1.0.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
bb8 = "0.8.1"
bb8-redis = "0.13.1"
# serde = { version = "1.0.192", features = ["derive"] }
